Cut the README down to what a contributor needs
Most of this README explained the launcher to its users - the jar layout,
how a launch proceeds, bundled agents, module-access grants, signed-jar
emulation, the limitations. All of that is at jenesis.build/launcher now,
so the README keeps what only this repository can say: that the artifact
is consumed by the build tool rather than depended on directly, how to
build it against the pinned submodule, what the test suite pins down, and
how CI and releases work.

The test suite is worth the space it takes. It is the reason a project
that assembles a class loader can be trusted, so the list of what it
covers stays, grouped by what each group protects.

The banner points at jenesis.build rather than the source repository.

Claude-Session: https://claude.ai/code/session_01BVrSJ84h82vdzAPHWyg6gB